force-app/main/default/objects/Insurance_Product__c/Insurance_Product__c.object-meta.xml
<CustomObject>
    <label>Insurance Product</label>
    <nameField>
        <label>Insurance Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>