force-app/main/default/objects/Insurance_Product__c/fields/Bodily_Injury_per_person__c.field-meta.xml
<CustomField>
    <fullName>Bodily_Injury_per_person__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bodily Injury per person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>