force-app/main/default/objects/Insurance_Product__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Product</relationshipLabel>
    <relationshipName>Insurance_Product</relationshipName>
    <type>Lookup</type>
</CustomField>