force-app/main/default/objects/Insurance_Product__c/fields/Cause_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Loss__c</fullName>
    <label>Cause of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cause_of_Loss</valueSetName>
    </valueSet>
</CustomField>