force-app/main/default/objects/Insurance_Product__c/fields/Combined_Single_Limit__c.field-meta.xml
<CustomField>
    <fullName>Combined_Single_Limit__c</fullName>
    <label>Combined Single Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>