force-app/main/default/objects/Insurance_Product__c/fields/Covered_Autos__c.field-meta.xml
<CustomField>
    <fullName>Covered_Autos__c</fullName>
    <label>Covered Autos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Any Auto</fullName>
            </value>
            <value>
                <fullName>Owned Autos Only</fullName>
            </value>
            <value>
                <fullName>Owned Private Passenger Autos</fullName>
            </value>
            <value>
                <fullName>Owned Autos Other Than Private Passenger Auto</fullName>
            </value>
            <value>
                <fullName>Owned Autos Subject To No Fault Benefits</fullName>
            </value>
            <value>
                <fullName>Owned Autos Subject To Compulsory Uninsured Motorist Law</fullName>
            </value>
            <value>
                <fullName>Specifically Defined Autos Only</fullName>
            </value>
            <value>
                <fullName>Hired Autos</fullName>
            </value>
            <value>
                <fullName>Non Owned Autos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>