force-app/main/default/objects/Insurance_Product__c/fields/Each_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Each_Occurence__c</fullName>
    <description>limit per occurrence</description>
    <label>Each Occurence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>