force-app/main/default/objects/Insurance_Product__c/fields/Medical_Expense_any_one_person__c.field-meta.xml
<CustomField>
    <fullName>Medical_Expense_any_one_person__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Medical Expense (any one person)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>