force-app/main/default/objects/Insurance_Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Major_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Subclass</valueSetName>
    </valueSet>
</CustomField>