force-app/main/default/objects/Insurance_Product__c/fields/Products_and_Completed_Operations_Aggreg__c.field-meta.xml
<CustomField>
    <fullName>Products_and_Completed_Operations_Aggreg__c</fullName>
    <label>Products and Completed Operations Aggreg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>