force-app/main/default/objects/Insurance_Product__c/fields/Property_Building_Limit__c.field-meta.xml
<CustomField>
    <fullName>Property_Building_Limit__c</fullName>
    <label>Property Building Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>