force-app/main/default/objects/Insurance_Product__c/fields/Property_Business_PP_Limit__c.field-meta.xml
<CustomField>
    <fullName>Property_Business_PP_Limit__c</fullName>
    <description>Personal Property</description>
    <inlineHelpText>Personal Property</inlineHelpText>
    <label>Property Business PP Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>