force-app/main/default/objects/Insurance_Product__c/fields/Show_Display__c.field-meta.xml
<CustomField>
    <fullName>Show_Display__c</fullName>
    <label>Show Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>