force-app/main/default/objects/Insurance_Product__c/fields/START_Rating_Tool__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Product</relationshipLabel>
    <relationshipName>Insurance_Product</relationshipName>
    <type>Lookup</type>
</CustomField>