force-app/main/default/objects/Insurance_Product__c/fields/START_Rating_Tool_CAP__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool_CAP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool CAP</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Product (START Rating Tool CAP)</relationshipLabel>
    <relationshipName>Insurance_Product2</relationshipName>
    <type>Lookup</type>
</CustomField>