force-app/main/default/objects/Insurance_Product__c/fields/START_Rating_Tool_CProp__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool_CProp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool CProp</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Product (START Rating Tool CProp)</relationshipLabel>
    <relationshipName>Insurance_Product6</relationshipName>
    <type>Lookup</type>
</CustomField>