force-app/main/default/objects/Insurance_Product__c/fields/START_Rating_Tool_GL__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool GL</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Product (START Rating Tool GL)</relationshipLabel>
    <relationshipName>Insurance_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>