force-app/main/default/objects/Insurance_Product__c/fields/START_Rating_Tool_PL__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool_PL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool PL</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Product (START Rating Tool PL)</relationshipLabel>
    <relationshipName>Insurance_Product5</relationshipName>
    <type>Lookup</type>
</CustomField>