force-app/main/default/objects/Insurance_Product__c/fields/START_Rating_Tool_Umbrella__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool_Umbrella__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool Umbrella</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Product (START Rating Tool Umbrella)</relationshipLabel>
    <relationshipName>Insurance_Product4</relationshipName>
    <type>Lookup</type>
</CustomField>