force-app/main/default/objects/Insurance_Product__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The United States, Puerto Rico, and Canada</fullName>
            </value>
            <value>
                <fullName>International waters or airspace</fullName>
            </value>
            <value>
                <fullName>All parts of the world</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>