force-app/main/default/objects/Insurance_Product__c/fields/Umbrella_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Aggregate__c</fullName>
    <label>Umbrella Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>