force-app/main/default/objects/Insurance_Product__c/fields/Umbrella_Retention__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Retention__c</fullName>
    <label>Umbrella Retention</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>