force-app/main/default/objects/Insurance_Product__c/fields/Umbrella_Type__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Type__c</fullName>
    <label>Umbrella Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Umbrella</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>