force-app/main/default/objects/Insurance_Product__c/fields/WC_EL_Disease_Each_Employee__c.field-meta.xml
<CustomField>
    <fullName>WC_EL_Disease_Each_Employee__c</fullName>
    <label>WC EL Disease Each Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>