force-app/main/default/objects/Insurance_Product__c/listViews/START_Insurance_Product.listView-meta.xml
<ListView>
    <fullName>START_Insurance_Product</fullName>
    <columns>NAME</columns>
    <columns>Carrier__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Each_Occurence__c</columns>
    <columns>General_Aggregate_Limit__c</columns>
    <columns>START_Rating_Tool__c</columns>
    <columns>Major_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>START Insurance Product</label>
</ListView>